Upgrade to version 4.0.39